# wezig

./: .dorfl.json  .gitignore  .goreleaser.yaml  CONTEXT.md  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  mobile-android.yml  mobile-ios.yml  mobile-smoke.yml  mobile-verify.yml  release.yml
docs/: conformance-tiers.md  mobile-exploration-findings.md  native-renderer-exploration-findings.md  shell-exploration-findings.md  v0-subset.md  web3-capabilities-exploration-findings.md
docs/adr/: 0001-v0-thin-subset-behind-swappable-seams.md  0002-paintbackend-seam-and-v0-layout.md  0003-v0-paint-c-linking-and-goldens.md  0004-windowing-sdl-as-v0-leaf-native-as-target.md  0005-renderer-seam-webview-backend-while-native-catches-up.md  0006-two-seams-renderer-and-toolkit-pinned-interfaces.md  0007-webview-shell-exploration-outcome-and-build-inputs.md  0008-toolkit-seam-split-chrome-surface-and-host-loop.md  0009-mobile-shell-exploration-outcome-and-build-inputs.md  0010-mobile-app-lifecycle-host-only-renderer-seam-not-grown.md  0011-wezig-is-a-general-browser-for-a-post-trusted-server-web.md  0012-native-renderer-conformance-tiers.md  0013-scriptengine-seam-bind-first-spidermonkey-lean.md  0014-native-renderer-exploration-outcome-and-build-inputs.md  0015-web3-capabilities-origin-model-wallet-broker-and-ipfs-depth.md  0016-ipfs-service-worker-hosting-via-carried-webkitgtk-fork-patch.md  0017-implementation-language-zig-for-glue-and-owned-layers-bind-the-commodity-engines.md  0018-prioritise-wezigrenderer-webview-keeps-degraded-features.md  0019-rust-interop-disadvantage-is-layer-specific-pure-rust-renderer-stack.md
mobile/android/: README.md  build-zig-libs.sh  build.gradle  settings.gradle
mobile/android/app/src/main/cpp/: CMakeLists.txt  wezig_embedding_jni.c  wezig_jni.c  wezig_renderer_jni.c  wezig_shell_jni.c
mobile/ios/: Info.plist  README.md  bridge-proof.sh  build-and-run.sh  embedding-proof.sh  renderer-proof.sh  scheme-proof.sh  seam-proofs.sh  shell-verify.sh
prototypes/: x11_window.zig
src/: android_renderer.zig  android_shell.zig  branding.zig  chrome.zig  chrome_conformance.zig  css.zig  diagnostics.zig  docs.zig  gpu_page_spike.zig  gtk_toolkit.zig  harfbuzz_spike.zig  html.zig  ios_shell.zig  ios_webview_renderer.zig  ipfs_scheme.zig  layout.zig  main.zig  mobile_abi.zig  mobile_chrome.zig  mobile_chrome_surface.zig  networking.zig  networking_spike.zig  paint.zig  renderer.zig  renderer_swap.zig  root.zig  script_engine.zig  sdl.zig  shell.zig  shell_main.zig  surface.zig  system_webview_renderer.zig  toolkit.zig  wallet_broker.zig  wallet_broker_child.zig  wallet_broker_spike.zig  web3_origin.zig  webkit_c.h  wezig_renderer.zig
tools/: gen_goldens.zig
work/protocol/: CLAIM-PROTOCOL.md  REVIEW-PROTOCOL.md  VERSION  WORK-CONTRACT.md
work/questions/: task-document-v0-subset-limits.md  task-ios-renderer-backend-oneshot.md  task-mobile-viewhandle-embedding-proof.md  task-mobile-web3-hooks-parity.md  task-spike-harfbuzz-shaping.md  task-spike-ipfs-secure-origin-service-worker.md  task-spike-webkitgtk-sw-scheme-patch-build-and-measure.md  (+1 more)
(+191 files in other folders)
